# Estructuras-Avanzadas

./: CMakeLists.txt
Experimento-Dimensionalidad/: CurseDim.cpp  Dimension.xlsx
KD-tree/: CMakeLists.txt  KD-tree.cpp  main.cpp
Kmeans/: kmeans.cpp
Practica1/: OOPvector.cpp  dynamicVector.cpp  fixedVector.cpp  modVector.cpp
Practica2/: 3.5Figure20.cpp  3.7Namespaces.cpp  3.8ReducingCode.cpp  ADTvector.cpp  DesignPatterns.cpp  MyNS.h
Practica3/: experimentoFinal.cpp
Practica4/: main.cpp
QuadTree/: QuadTree.cpp
QuadTreeBmp/: CMakeLists.txt  bitmap.cpp  bitmap.h  bmp.cpp
Rtree/: RTree.hpp  test-harness.cpp
Skiplist/Concurrent SkipList/: CMakeLists.txt  cSkipList.h  main.cpp
Skiplist/Concurrent SkipList/source/: cSkipList.h
Skiplist/Secuencial SkipList/: CMakeLists.txt  main.cpp
Vectores/3.1.1/: main.cpp
Vectores/3.1.2/: main.cpp
Vectores/3.2/: main.cpp
Vectores/3.3/: main.cpp
Z-Order/: CMakeLists.txt  main.cpp
