cmake_minimum_required(VERSION 3.15)
project(Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(fixedVector fixedVector.cpp)
add_executable(dynamicVector dynamicVector.cpp)
add_executable(modVector modVector.cpp)
add_executable(OOPvector OOPvector.cpp)
add_executable(3.4ADTvector ADTvector.cpp)
add_executable(3.5DesignPatterns DesignPatterns.cpp)
add_executable(3.5Figure20 3.5Figure20)
add_executable(3.8ReducingCode 3.8ReducingCode.cpp)
add_executable(3.7Namespaces 3.7Namespaces.cpp)